# atmosil

./: CMakeLists.txt
shaders/: smoke.frag  smoke.vert  velocity.frag
src/: main.cpp
src/atmo/: AtmoDebugControl.cpp  AtmoDebugControl.h  GasRenderer.cpp  GasRenderer.h  ParticleSystem.cpp  ParticleSystem.h  Space.cpp  Space.h
src/utils/: random.cpp  random.h
